Bug 72427 - Function FILTERXML is incorrect when using Japanese characters.
Summary: Function FILTERXML is incorrect when using Japanese characters.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta2
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.3.0 target:4.2.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-07 05:29 UTC by Akira Matsumiya
Modified: 2013-12-07 06:42 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
Sample Calc Document (25.15 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-12-07 05:29 UTC, Akira Matsumiya
Details
You can see the setting formula in this image. (71.57 KB, image/png)
2013-12-07 05:31 UTC, Akira Matsumiya
Details
You can see result on Japanese environment in this image. (122.83 KB, image/png)
2013-12-07 05:33 UTC, Akira Matsumiya
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Akira Matsumiya 2013-12-07 05:29:05 UTC
Created attachment 90391 [details]
Sample Calc Document

Function FILTERXML return garbled characters when using Japanese characters. (maybe all 2byte chracters?)

Sample Calc document attached.

Cell A1's result is correct.
Cell A3's result is correct.(xml document)
 see attached image when xml document garbled.
Cell A4's result is correct.Because @company value is alphabet called "none".
Cells A5's result is incorrect.Because @state value is Japanese caracters (Kanji) called "東京都"
Comment 1 Akira Matsumiya 2013-12-07 05:31:04 UTC
Created attachment 90392 [details]
You can see the setting formula in this image.
Comment 2 Akira Matsumiya 2013-12-07 05:33:34 UTC
Created attachment 90393 [details]
You can see result on Japanese environment in this image.

Cells A5 is garbled in Japanes environment.
Comment 3 Markus Mohrhard 2013-12-07 05:57:20 UTC
Ah, sorry I have been using an ASCII function.
Comment 4 Commit Notification 2013-12-07 06:00:26 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=62174f6a8d4c191d67b7952d851a06b84a2b02be

correct UTF8 handling for FILTERXML, fdo#72427



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-12-07 06:02:48 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9bb72868b846a7ba7e8f985a87e944fb760a0f10&h=libreoffice-4-2

correct UTF8 handling for FILTERXML, fdo#72427


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Akira Matsumiya 2013-12-07 06:42:55 UTC
Markus Mohrhard :
Thank you to fix very quickly.