correct UTF8 handling for FILTERXML, fdo#72427

Change-Id: Ie0a5824ddbc3e75a1bb22121e620378ad3e0dfde