sc/source/core/tool/interpr7.cxx
@@ -89,19 +89,19 @@ void ScInterpreter::ScFilterXML()
                             xmlNsPtr ns = (xmlNsPtr)pNodeSet->nodeTab[0];
                             xmlNodePtr cur = (xmlNodePtr)ns->next;
                             boost::shared_ptr<xmlChar> pChar2(xmlNodeGetContent(cur), xmlFree);
-                            aResult = OUString::createFromAscii((char*)pChar2.get());
+                            aResult = OStringToOUString(OString((char*)pChar2.get()), RTL_TEXTENCODING_UTF8);
                         }
                         else if(pNodeSet->nodeTab[0]->type == XML_ELEMENT_NODE)
                         {
                             xmlNodePtr cur = pNodeSet->nodeTab[0];
                             boost::shared_ptr<xmlChar> pChar2(xmlNodeGetContent(cur), xmlFree);
-                            aResult = OUString::createFromAscii((char*)pChar2.get());
+                            aResult = OStringToOUString(OString((char*)pChar2.get()), RTL_TEXTENCODING_UTF8);
                         }
                         else
                         {
                             xmlNodePtr cur = pNodeSet->nodeTab[0];
                             boost::shared_ptr<xmlChar> pChar2(xmlNodeGetContent(cur), xmlFree);
-                            aResult = OUString::createFromAscii((char*)pChar2.get());
+                            aResult = OStringToOUString(OString((char*)pChar2.get()), RTL_TEXTENCODING_UTF8);
                         }
                     }
                     else
